--- a/leaflifespan.Rmd
+++ b/leaflifespan.Rmd
@@ -3,24 +3,95 @@ output: html_document
 ---
 #file names
 - leaf_counts is file with calculated leaf counts and leaf lifespan data
-- LLSummary is file with means of LL - and other variables - by species and age; LMA data is merged to this file
-- subsets of LLSummary are created to omit babies or HATE for various analyses
+- SummarySppAge is file with means of LL - and other variables - by species and age; LMA data is merged to this file
+- subsets of SummarySppAge are created to omit babies or HATE for various analyses
 
-# general results
+#variables in my dataset
+Measures of biomass and growth include:
+- basal diameter
+- "leader" diameter
+- total biomass
+- leaf mass (calculations not yet done)
+- leaf area (calculations not yet done)
+- stem biomass (calculations not yet done)
+- leaf count along leaders
+- shoot extension
+
+* all these can be plotted against age as actual values or as change from a year earlier
+* these measures are all done at the level of "individual" with 7 individuals of each species at each of 6 sites
+
+Reproduction measures include:
+- total reproductive investment (biomass)
+- RA (ratio of reproductive investment to total surplus energy)
+- investment in each of 5 different categories of reproductive investment:
+  * tissues aborted pre-pollination (ie. aborted bud)
+  * tissues that reach their final pre-pollination stage (i.e. open flower)
+  * tissues aborted after pollination (i.e. aborted immature fruit)
+  * tissues associated with packaging and dispersal of successful, mature fruit (i.e. cones, wings, seed pods)
+  * the propagule itself (either the seed or the seed with fused fruit tissue)
+- % investment in accessory tissues versus the propagule
+- seed set (calculations not yet done)
+  
+  !!!TO DISCUSS: I only have my own seed weights for species where the seed isn't fused to any fruit tissue. However, I do have seed weights from the literature and global databases for all species and calculations could be redone based on actual seed weights for all species.!!!
+
+
+Traits are:
+- leaf lifespan (individuals)
+- LMA (species * age = site)
+- wood density (species)
+- maximum height (species or site)
+- seed size (species)
+
+!!!TO DISCUSS: There are many way to calculate leaf lifespan, resulting in somewhat different patterns!!!
+
+#previously observed patterns that are - fortunately - also true for my dataset
+- correlation between LMA and leaf lifespan. (True when HATE is removed.)
+- larger seeds have higher accessory costs
+
+##GENERAL THOUGHTS (and conclusions)
+
+#Leaf lifespan, LMA, leaf area, leaf weight changes with age:
+
+In the field, it seemed that older plants had fewer leaves on their shoots, indicating either decreasing lower leaf lifespan (opposite accepted trend) and/or decreasing shoot extension with age.
+
+* results show no overall change in leaf lifespan with age, although some species have slightly increasing leaf lifespan
+* both the number of leaves on a shoot and shoot extension decline with age, with some species having quite dramatic shifts (and others no shift)
+* TO DO: Total plant leaf area (and leaf number) with age, scaled to basal area and to stem weight
+* TO DO: Plot leaf weight against height (same plot as Daniel used in the data paper in Ecology)
+
+Revised thoughts: The leading shoots show a slight decline in leaf number with age. Overall, the plant will look a lot "leggier" because non-leading shoots with show less new growth and even fewer leaves. This pattern should be captured in by looking at shifts in the ratio of leaf count (or area) to basal stem area (ir total stem weight) across ages.
+
+# overall LL, LMA results
 
 - strong correlation between LMA and LL when all species*site combinations included
 - LL variable across species, as expected; same for LMA
 - LL does not change as plants age; LMA does not change as plants age
 - leaf count along the leader decreases in older plants for many species - which is why LL appears to decrease
 
+#Accessory costs
+
+Accessory costs account for the vast majority of my plant's reproductive investment - and presumably for other perennial plants worldwide - but this is an often ignored pool.
+* Overall, larger seeds have higher accessory costs (as has been shown for other angiosperm species and given as one of the reasons why angiosperms can have smaller seeds than gymnosperms)
+
+While overall accessory costs are not clearly affected by age, several of the sub-categories do change with age:
+- proportion of reproductive energy investment in aborted buds and flowers declines after the first few reproductive years
+
+#Correlation between each of the five "traits" and growth and reproductive measures
+* TO DO: Re
+
+#discuss with Daniel
+- once we are certain about leaf lifespan calculations, those calculations should go into a separate file, since that is background processing, but like calculating investment. Then this becomes the file where variables are summarized, plotted analyzed.
+- make sure regressions exist (or are done), to separately look at leaf and stem biomass
+- seed weight vs. propagule weight dilemma
+- sites that are aged 1.35 vs 1.4 years
 
 #next to do
 
 - check how overall plant leaf numbers changes with age, diameter
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
-# load packages
 
+# load packages and "open" dataframes to use
 library(remake)
 create_bindings()
 
@@ -30,16 +101,29 @@ wood <- filter(woodDensity_raw, use=="use")
 
 seedsize <- seedSize_raw
 
-# leaf lifespan data
-raw_leaf_lifespan <-  filter(leafLifespan_raw, dont_use!="dead" & dont_use!="dont_use")
+harvest <- filter(HarvestData, use_status=="use" & segment==1 & start_end=="end")
 
-leaf_lifespan <- raw_leaf_lifespan %>%
-              select(species,age,site,tag_ID,d_start,d_end,length_start,new_length,segment,lvs_start_count,lvs_end_count,lvs_new_count,new_but_shed_count)
+investment <- ReproductionAllocation_all
+names(investment) <- c("individual","ReproInv","age","GrowthInv","StartWeight","FinalWeight","StartBasalDiamAv","FinalBasalDiamAv","TotalInvestment","RA","species")
+#still have tagId as label
+#remaking this from scratch 
+
+accessory <- AccessoryCosts_all
+
+leafLifespan <- filter(leafLifespan_raw, dont_use!="dead" & dont_use!="dont_use")
+leafLifespan$individual <- as.factor(leafLifespan$individual)
+#loading this column as character, so using this for now
+
+# Calculating Leaf Lifespan
 
 # where counts did not previously exists, set as 0; CHECK WITH DANIEL THAT "V" IS A SET "NAME" IN THESE FUNCTIONS
+
+leaf_lifespan_temp <- leafLifespan %>%
+              select(species,age,site,individual,d_start,d_end,length_start,new_length,segment,lvs_start_count,lvs_end_count,lvs_new_count,new_but_shed_count)
+
 for(v in c("lvs_start_count","lvs_end_count","lvs_new_count","new_but_shed_count")) {
-  i <- is.na(leaf_lifespan[[v]])
-  leaf_lifespan[[v]][i] <- 0
+  i <- is.na(leaf_lifespan_temp[[v]])
+  leaf_lifespan_temp[[v]][i] <- 0
 }
 
 # For individuals with "length" measures, translate into count
@@ -51,59 +135,98 @@ leaves_per_length_spp <-  filter(leavesPerLength_raw,use=="yes") %>%
   summarise(count_per_length = mean(count_per_length, na.rm=TRUE))
 
 # get spp average for all individuals
-raw_leaf_lifespan$count_per_length <- leaves_per_length_spp$count_per_length[match(raw_leaf_lifespan$species, leaves_per_length_spp$species)]
+leafLifespan$count_per_length <- leaves_per_length_spp$count_per_length[match(leafLifespan$species, leaves_per_length_spp$species)]
 
 # if possible use data for that individual, if it exists; this code substitutes in species count per length #s for individuals where this data is available
-i <- !is.na(raw_leaf_lifespan$mm_lvs)
-raw_leaf_lifespan$count_per_length[i] <- (raw_leaf_lifespan$count_lvs_spec/raw_leaf_lifespan$mm_lvs)[i]
+i <- !is.na(leafLifespan$mm_lvs)
+leafLifespan$count_per_length[i] <- (leafLifespan$count_lvs_spec/leafLifespan$mm_lvs)[i]
 
 #this is the end of the section Daniel helped me rewrite - next section is mine
 
 #get total leaf counts
 for(v in c("lvs_start_length","lvs_start_count","lvs_end_length","lvs_end_count","lvs_new_length","lvs_new_count","new_but_shed_count")) {
-  i <- is.na(raw_leaf_lifespan[[v]])
-  raw_leaf_lifespan[[v]][i] <- 0
+  i <- is.na(leafLifespan[[v]])
+  leafLifespan[[v]][i] <- 0
   }
-raw_leaf_lifespan$lvs_start <- raw_leaf_lifespan$lvs_start_count + (raw_leaf_lifespan$lvs_start_length * raw_leaf_lifespan$count_per_length)
-raw_leaf_lifespan$lvs_end <- raw_leaf_lifespan$lvs_end_count + (raw_leaf_lifespan$lvs_end_length * raw_leaf_lifespan$count_per_length)
-raw_leaf_lifespan$lvs_new <- raw_leaf_lifespan$lvs_new_count + (raw_leaf_lifespan$lvs_new_length * raw_leaf_lifespan$count_per_length)
+leafLifespan$lvs_start <- leafLifespan$lvs_start_count + (leafLifespan$lvs_start_length * leafLifespan$count_per_length)
+leafLifespan$lvs_end <- leafLifespan$lvs_end_count + (leafLifespan$lvs_end_length * leafLifespan$count_per_length)
+leafLifespan$lvs_new <- leafLifespan$lvs_new_count + (leafLifespan$lvs_new_length * leafLifespan$count_per_length)
 
 #calculating leaf lifespan
-raw_leaf_lifespan$LL_bd <- (raw_leaf_lifespan$lvs_start)/(((raw_leaf_lifespan$lvs_start)-(raw_leaf_lifespan$lvs_end))+(raw_leaf_lifespan$lvs_new)/2)
-raw_leaf_lifespan$LL_death <- (raw_leaf_lifespan$lvs_start)/((raw_leaf_lifespan$lvs_start)-(raw_leaf_lifespan$lvs_end))
-raw_leaf_lifespan$LL_birth <- (raw_leaf_lifespan$lvs_start)/(raw_leaf_lifespan$lvs_new)
+leafLifespan$LL_bd <- (leafLifespan$lvs_start)/(((leafLifespan$lvs_start)-(leafLifespan$lvs_end))+(leafLifespan$lvs_new)/2)
+leafLifespan$LL_death <- (leafLifespan$lvs_start)/((leafLifespan$lvs_start)-(leafLifespan$lvs_end))
+leafLifespan$LL_birth <- (leafLifespan$lvs_start)/(leafLifespan$lvs_new)
 
-raw_leaf_lifespan$LL_death[which(is.infinite(raw_leaf_lifespan$LL_death))] <- NA
-raw_leaf_lifespan$LL_bd[which(is.infinite(raw_leaf_lifespan$LL_death))] <- NA
-raw_leaf_lifespan$LL_birth[which(is.infinite(raw_leaf_lifespan$LL_death))] <- NA
+leafLifespan$LL_death[which(is.infinite(leafLifespan$LL_death))] <- NA
+leafLifespan$LL_bd[which(is.infinite(leafLifespan$LL_death))] <- NA
+leafLifespan$LL_birth[which(is.infinite(leafLifespan$LL_death))] <- NA
 
-#write.csv(raw_leaf_lifespan, file = "raw_leaf_lifespan.csv")
+
+#adding investment and accessory costs data to leafLifespan dataframe to create a dataframe with all individual level data
+#SummaryInd <- left_join(leafLifespan, investment, by = "individual")
+#SummaryInd <- left_join(SummaryInd, accessory, by = "individual")
+#SummaryInd <- left_join(SummaryInd, harvest, by = "individual")
+#not sure why the above text isn't working... using merge instead
+
+SummaryInd <- merge(leafLifespan, investment, by.x=c("individual"), by.y=c("individual"))
+SummaryInd <- subset(SummaryInd, select = -c(age.y,species.y) )
+SummaryInd <- merge(SummaryInd, accessory, by.x=c("individual"), by.y=c("individual"))
+SummaryInd <- subset(SummaryInd, select = -c(age,species) )
+SummaryInd <- merge(SummaryInd, harvest, by.x=c("individual"), by.y=c("individual"))
+#problem here, because duplicates number of entries
+SummaryInd <- subset(SummaryInd, select = -c(age.x,species.x) )
+
+#adding variables to look at change across years
+SummaryInd$change_shoot_diam <- SummaryInd$d_end - SummaryInd$d_start
+SummaryInd$change_basal_diam <- SummaryInd$FinalBasalDiam - SummaryInd$StartBasalDiam
+SummaryInd$change_shoot_area <- (3.14*((SummaryInd$d_end/2)^2)) - (3.14*((SummaryInd$d_start/2)^2))
+SummaryInd$change_basal_area <- (3.14*((SummaryInd$FinalBasalDiam/2)^2)) - (3.14*((SummaryInd$StartBasalDiam/2)^2))
+SummaryInd$lvs_end_total <- SummaryInd$lvs_end + SummaryInd$lvs_new
 ```
 
 #TODO: Check outlier for HATE
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
-#adding leaf, stem weight data from InvestmentSummary to raw_leaf_lifespan dataframe; can't RUN LINES 95-108 UNTIL INVESTMENT SUMMARY OPEN - THEN PROBLEM WITH PLYR
-#raw_leaf_lifespan <- left_join(raw_leaf_lifespan, InvestmentSummary, by = "individual")
+#summarizing data by species, age
 
-#adding columns to raw_leaf_lifespan to look at change across year
-raw_leaf_lifespan$change_shoot_diam <- raw_leaf_lifespan$d_end - raw_leaf_lifespan$d_start
-#raw_leaf_lifespan$change_basal_diam <- raw_leaf_lifespan$FinalBasalDiam - raw_leaf_lifespan$StartBasalDiam
-raw_leaf_lifespan$change_shoot_area <- (3.14*((raw_leaf_lifespan$d_end/2)^2)) - (3.14*((raw_leaf_lifespan$d_start/2)^2))
-#raw_leaf_lifespan$change_basal_area <- (3.14*((raw_leaf_lifespan$FinalBasalDiam/2)^2)) - (3.14*((raw_leaf_lifespan$StartBasalDiam/2)^2))
-
-#removng crazy numbers; probably better to do this for each analysis than overall, because removing indiviiduals from all three at once
-#raw_leaf_lifespan <- subset(raw_leaf_lifespan,LL_bd>0)
-#raw_leaf_lifespan <- subset(raw_leaf_lifespan,LL_bd<6)
-#raw_leaf_lifespan <- subset(raw_leaf_lifespan,LL_birth<8)
-#raw_leaf_lifespan <- subset(raw_leaf_lifespan,LL_death<8)
-
-#creating summary files
 #leaf lifespan summary by species, age
-LLSummary <- raw_leaf_lifespan %>%
+LL_summary <- SummaryInd %>%
   filter(LL_bd>0 & LL_bd<6 & LL_birth<8 & LL_death<8) %>%
   group_by(species, age) %>%
-  summarise_each(funs(mean, se, length), LL_bd, LL_death,LL_birth,new_length, lvs_end, lvs_end_total)
+  summarise_each(funs(mean, se, length), LL_bd, LL_death,LL_birth,new_length, lvs_end, lvs_end_total, change_shoot_diam, change_basal_diam, change_shoot_area, change_basal_area)
+
+#LMA summary by species, age
+LMA_summary <- LMA %>%
+  group_by(species, age) %>%
+  summarise_each(funs(mean, se, length), LMA)
+names(LMA_summary)<-c("species","age","LMA_mean","LMA_se","LMA_length")
+
+#accessory tissue summary by species, age
+accessory_summary <- accessory %>%
+  group_by(species, age) %>%
+  summarise_each(funs(mean, se, length), PrePol_A, PrePol_S, PostPol_A, PD, Prop)
+
+#investment summary by species, age
+investment_summary <- investment %>%
+  group_by(species, age) %>%
+  summarise_each(funs(mean, se, length), GrowthInv, FinalWeight, FinalBasalDiamAv, TotalInvestment, RA)
+
+#harvest summary by species, age
+harvest_summary <- harvest %>%
+  group_by(species, age) %>%
+  summarise_each(funs(mean, se, length), total_stem_weight, total_leaf_weight, height)
+
+#RA for each species/age combination                 
+maxRA <- investment %>%
+  group_by(species, age) %>%
+  summarise_each(funs(max), RA)
+names(maxRA)<-c("species","age","maxRA")
+
+#maximum H for each species/age combination                 
+maxH <- harvest %>%
+  group_by(species, age) %>%
+  summarise_each(funs(max), height)
+names(maxH)<-c("species","age","maxH")
 
 #LMA summary by species, age
 LMA_summary <- LMA %>%
@@ -118,7 +241,7 @@ Wood_summary <- wood %>%
 names(Wood_summary)<-c("species","WD_mean","WD_se","WD_length")
 
 #leaf lifespan summary by species
-LL_spp <- raw_leaf_lifespan %>%
+LL_spp <- leafLifespan %>%
   filter(age>2) %>%
   group_by(species) %>%
   summarise_each(funs(mean, se, length), LL_bd, LL_death,LL_birth)
@@ -130,14 +253,37 @@ LMA_spp <- LMA %>%
   summarise_each(funs(mean, se, length), LMA)
 names(LMA_spp)<-c("species", "LMA_mean","LMA_se","LMA_length")
 
-#merge LMA, wood density, seed size data into LLSummary dataframe
-LLSummary <- merge(LLSummary, LMA_summary, by.x=c("species","age"), by.y=c("species","age"))
-LLSummary <- merge(LLSummary, Wood_summary, by.x=c("species"), by.y=c("species"))
-LLSummary <- merge(LLSummary, seedsize, by.x=c("species"), by.y=c("species"))
-LL_spp <- merge(LL_spp, LMA_spp, by.x=c("species"), by.y=c("species"))
-LL_spp <- merge(LL_spp, Wood_summary, by.x=c("species"), by.y=c("species"))
-LL_spp <- merge(LL_spp, seedsize, by.x=c("species"), by.y=c("species"))
-#still to add, max H from Investment data, absolute and relative growth measures
+#maximum height for each species
+MaxH_spp <- harvest %>%
+  group_by(species) %>%
+  summarise_each(funs(max), height)
+names(LMA_spp)<-c("species", "maxH_spp")
+
+
+SummaryInd <- merge(SummaryInd,Wood_summary, by.x=c("species"), by.y=c("species"))
+SummaryInd <- merge(SummaryInd,LMA_summary, by.x=c("species","age"), by.y=c("species","age"))
+SummaryInd <- merge(SummaryInd,MaxH_spp, by.x=c("species"), by.y=c("species"))
+SummaryInd <- merge(SummaryInd,seedsize, by.x=c("species"), by.y=c("species"))
+#TO DO: REMOVE DUPLICATE COLUMNS FOR AGE and SPECIES
+
+#merge various data summaries into SummarySppAge dataframe
+SummarySppAge <- merge(LL_summary, LMA_summary, by.x=c("species","age"), by.y=c("species","age"))
+SummarySppAge <- merge(SummarySppAge, Wood_summary, by.x=c("species"), by.y=c("species"))
+SummarySppAge <- merge(SummarySppAge, seedsize, by.x=c("species"), by.y=c("species"))
+SummarySppAge <- merge(SummarySppAge, MaxH_spp, by.x=c("species"), by.y=c("species"))
+SummarySppAge <- merge(SummarySppAge, maxH, by.x=c("species","age"), by.y=c("species","age"))
+SummarySppAge <- merge(SummarySppAge, investment_summary, by.x=c("species","age"), by.y=c("species","age"))
+SummarySppAge <- merge(SummarySppAge, accessory_summary, by.x=c("species","age"), by.y=c("species","age"))
+SummarySppAge <- merge(SummarySppAge, harvest_summary, by.x=c("species","age"), by.y=c("species","age"))
+#TO DO: REMOVE DUPLICATE COLUMNS FOR AGE
+
+#merge various data summaries into SummarySpp dataframe
+SummarySpp <- merge(LL_spp, LMA_spp, by.x=c("species"), by.y=c("species"))
+SummarySpp <- merge(SummarySpp, Wood_summary, by.x=c("species"), by.y=c("species"))
+SummarySpp <- merge(SummarySpp, seedsize, by.x=c("species"), by.y=c("species"))
+SummarySpp <- merge(SummarySpp, maxH, by.x=c("species"), by.y=c("species"))
+
+#WONDERING IF I SHOULD AT THIS POINT HAVE THE DATA FRAME CALLED "sUMMARYINDIVIDUAL" INSTEAD, SINCE NOW CONTAINS FAR MORE THAN LL DATA
 
 #plotting and stats
 #creating lists of information for plotting symbols, colors, labels
@@ -148,81 +294,62 @@ pch.age <- c(1,1,16,16,16,16)
 labels.spp <- c("Banksia ericifolia","Boronia ledifolia","Conospermum ericifolium","Epacris micraphylla", "Grevillea buxifolia","Grevillea speciosa","Hakea teretifolia","Hemigenia purpurea","Leucopogon esquamatus","Persoonia lanceolata", "Petrophile puchella", "Phyllota phyllicoides", "Pimelea linifolia", "Pultanaea tuberculata")
 names(labels.spp) <- c("BAER","BOLE","COER","EPMI","GRBU","GRSP","HATE","HEPU","LEES","PELA","PEPU","PHPH","PILI","PUTU")
 labels.age <- c("1.4","2.4","5","7","9","32")
-
-#LL vs LMA
-#remove HATE, babies
-#instead of separate dataframes, can probably incorporate this information directly into plotting and analysis commands
-#LL_nobabies <- subset(raw_leaf_lifespan, age>2)
-#LMA_nobabies <- subset(LMA, age>2)
-#LL_noHate <- subset(LLSummary, species != "HATE")
-#LL_noHatebabies <- subset(LL_nobabies, species != "HATE")
+names(labels.age) <- c("1.4","2.4","5","7","9","32")
 ```
-
-# relationship between LMA, LL by age, species
-
-For 7 year old plants
-```{r, echo=FALSE}
-plot(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==7), xlab="LMA", ylab="leaf lifespan (years)", main="leaf lifespan versus LMA", las=1, pch=16)
-text(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==7), labels=species, pos=1, offset=-0.9, cex=0.9,col="blue")
-text(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==7 & species=="HATE"), labels=species, pos=1, offset=-0.9, cex=0.9,col="red")
-mod <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,species!="HATE" & age==7))
-summary(mod)
-abline(mod)
-```
-
 
 # Plotting final leaf number on the leader by diameter increase of the entire plant (basal diameter) and the leader (shoot diameter).
 
 Both show a strong correlation and species effect as expected. For the model with basal diameter there is a strong age effect, but not for shoot diameter. This is presumably because a shoot of a given species should always deploy the same number of leaves for the same diameter increase. In contrast, the whole plant will have many differing shoot numbers with age, so differing effects of a single shoot's increased diameter. Strangely, the model with basal diameter shows a stronger effect between diameter increase and leaf number.
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
-plot(change_basal_diam ~ leaf_new_total, raw_leaf_lifespan, log="xy", col=col.age[as.factor(age)], pch=16, xlab="leaf number on leader", ylab="change in basal diameter")
+plot(change_basal_diam ~ lvs_end_total, SummaryInd, log="xy", col=col.age[as.factor(age)], pch=16, xlab="leaf number on leader", ylab="change in basal diameter")
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
-mod <- lm(log(leaf_new_total) ~ log(change_basal_diam+1) + species +age, raw_leaf_lifespan)
+mod <- lm(log(lvs_end_total) ~ log(change_basal_diam+1) + species +age, SummaryInd)
 summary(mod)
 
-plot(change_shoot_diam ~ leaf_new_total, raw_leaf_lifespan, log="xy", col=col.age[as.factor(age)], pch=16, xlab="leaf number on leader", ylab="change in diameter of leader")
+plot(change_shoot_diam ~ lvs_end_total, SummaryInd, log="xy", col=col.age[as.factor(age)], pch=16, xlab="leaf number on leader", ylab="change in diameter of leader")
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
-mod <- lm(log(leaf_new_total) ~ log(change_shoot_diam+10) + species +age, data= subset(raw_leaf_lifespan, !is.na(change_shoot_diam)))
+mod <- lm(log(lvs_end_total) ~ log(change_shoot_diam+10) + species +age, data= subset(SummaryInd, !is.na(change_shoot_diam)))
 summary(mod)
 ```
 
-
-
-
 #LL vs LMA using species by site means
-
 Overall plot shows a lack of relationship when HATE included. This is because it has such a high LMA. The youngest and oldest plants have no pattern, presumably because LL data are inaccurate
 
 ```{r, echo=FALSE,results='hide', message=FALSE}
 
 col.LMA <-c("black","purple", "pink", "light green", "orange","blue", "light blue","red")
 labels.LMA <-c("all except HATE","age 1.4", "age 2.4", "age 5", "age 7", "age 9", "age 32", "including HATE")
-plot(LL_birth_mean ~ LMA_mean, LLSummary, type="n", xlab="LMA", ylab="leaf lifespan (years)", main="leaf lifespan versus LMA (all species and ages)", las=1,pch=17, log="xy")
-points(LL_birth_mean ~ LMA_mean, data=subset(LLSummary, species!="HATE"), pch=16, cex=1.2, col=col.age[as.factor(age)])
-points(LL_birth_mean ~ LMA_mean, col="red", data=subset(LLSummary, species=="HATE"), pch=17)
+plot(LL_birth_mean ~ LMA_mean, SummarySppAge, type="n", xlab="LMA", ylab="leaf lifespan (years)", main="leaf lifespan versus LMA (all species and ages)", las=1,pch=17, log="xy")
+points(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE"), pch=16, cex=1.2, col=col.age[as.factor(age)])
+points(LL_birth_mean ~ LMA_mean, col="red", data=subset(SummarySppAge, species=="HATE"), pch=17)
 #need log transformation to get these to plot onto axes
-mod <- lm(LL_birth_mean ~ LMA_mean, LLSummary)
+mod <- lm(LL_birth_mean ~ LMA_mean, SummarySppAge)
 abline(mod, col="red", lty=2)
-mod_no_HATE <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary, species!="HATE"))
+mod_no_HATE <- lm(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge, species!="HATE"))
 abline(mod_no_HATE, lwd=2)
-mod_no_HATE5 <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==5&species!="HATE"))
-abline(mod_no_HATE5, col="light green", lwd=1.5)
-mod_no_HATE7 <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==7&species!="HATE"))
-abline(mod_no_HATE7, col="orange", lwd=1.5)
-mod_no_HATE9 <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==9&species!="HATE"))
-abline(mod_no_HATE9, col="blue", lwd=1.5)
-mod_no_HATE2.4 <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==2.4&species!="HATE"))
-abline(mod_no_HATE2.4, col="pink", lwd=1.5)
-mod_no_HATE1 <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age<2.4&species!="HATE"))
-abline(mod_no_HATE1, col="purple", lwd=1.5)
-mod_no_HATE32 <- lm(LL_birth_mean ~ LMA_mean, data=subset(LLSummary,age==32&species!="HATE"))
-abline(mod_no_HATE32, col="light blue", lwd=1.5)
-
 legend("bottomright",col=col.LMA, labels.LMA, pch=16, cex=1.4)
-summary(mod)
-```
+summary(mod_no_HATE)
 
+#plot_by_age <- function(age) {
+#  mod <- lm(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge,age==age&species!="HATE")
+#  abline(mod, col=col.age[age], lwd=1.5)
+#}
+  
+#for(n in names(labels.age)) {
+#  plot_by_age(n)
+#}
+
+# Relationship between LMA, LL for 7 year old plants
+# There would be a similar plot for any other age as well. As with the overall LMA analyses, HATE needs to be removed. 
+
+plot(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge,age==7), xlab="LMA", ylab="leaf lifespan (years)", main="leaf lifespan versus LMA", las=1, pch=16)
+text(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge,age==7), labels=species, pos=1, offset=-0.9, cex=0.9,col="blue")
+text(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge,age==7 & species=="HATE"), labels=species, pos=1, offset=-0.9, cex=0.9,col="red")
+mod <- lm(LL_birth_mean ~ LMA_mean, data=subset(SummarySppAge,species!="HATE" & age==7))
+summary(mod)
+abline(mod)
+```
 
 #Leaf lifespan patterns
 First a model showing data by age and species, omitting the youngest plants. Uses calculations for "leaf births" only. Plots of leaf lifespan by age for each of the species
@@ -230,24 +357,22 @@ First a model showing data by age and species, omitting the youngest plants. Use
 Age is not significant, but some significant interactions (COER, HATE, HEPU)
 And many species have sigificantly different LL from one another
 
-
 ```{r, echo=FALSE,results='hide', message=FALSE}
-mod <- lm(LL_birth ~ age + species +age*species, data=subset(raw_leaf_lifespan,age>3 & LL_birth!="Inf"))
+mod <- lm(LL_birth ~ age + species +age*species, data=subset(SummaryInd,age>3 & LL_birth!="Inf"))
 summary(mod)
 
 #WHY ARE THE FOLLOWING TWO LINES OF CODE NEEDED?
-raw_leaf_lifespan %>% group_by(species) %>%
+leafLifespan %>% group_by(species) %>%
     summarise(mean(LL_birth))
 
 #where does the [spp] comes from? This is the first place in the script it is used like this - I assume it could be any name?
 plot_LLvAge <- function(spp) {
-  plot(LL_birth ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leaf lifespan (leaf births)", cex.axis=.8, las=1,
+  plot(LL_birth ~ age, data=subset(SummaryInd,species==spp), xlab="age", ylab="leaf lifespan (leaf births)", cex.axis=.8, las=1,
      main=labels.spp[spp], xlim=c(1,35), ylim=c(0,8), log="x", pch=16)
-  points(LL_birth_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
-  points((LL_birth_mean+LL_birth_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
-  points((LL_birth_mean-LL_birth_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
+  points(LL_birth_mean ~ age, data=subset(SummarySppAge, species==spp), cex=1.3, pch=8)
+  points((LL_birth_mean+LL_birth_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=25)
+  points((LL_birth_mean-LL_birth_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=24)
 }
-
 
 for(n in names(labels.spp)) {
   plot_LLvAge(n)
@@ -255,13 +380,12 @@ for(n in names(labels.spp)) {
 
 ```
 
-
 #LMA by age, species, without youngest plants
 
 There is also no overall affect of age on LMA, although a few species would show an effect if analyzed independently. (Again, this model omits 1-year old plants.)
 
 ```{r, echo=FALSE, message=FALSE}
-#plot(LMA_mean ~ as.factor(species), data=subset(LLSummary,age>3), xlab="species", ylab="LMA", cex.axis=.8, las=1)
+#plot(LMA_mean ~ as.factor(species), data=subset(SummarySppAge,age>3), xlab="species", ylab="LMA", cex.axis=.8, las=1)
 #mod <- lm(LMA ~ age +species + age*species, LMA)
 #summary(mod)
 
@@ -271,27 +395,23 @@ LMA %>% group_by(species) %>%
 plot_LMAvAge <- function(spp) {
   plot(LMA ~ age, data=subset(LMA,species==spp), xlab="age", ylab="LMA", cex.axis=.8, las=1, pch=16, log="x",
   main=labels.spp[spp])
-  points(LMA_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
-  points((LMA_mean+LMA_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
-  points((LMA_mean-LMA_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
+  points(LMA_mean ~ age, data=subset(SummarySppAge, species==spp), cex=1.3, pch=8)
+  points((LMA_mean+LMA_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=25)
+  points((LMA_mean-LMA_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=24)
+  }
   #I want to add a line of code that plots over the means for each age. I did this above by calling in another file, but wondering about on-the-spot calculations
-}
+
 
 mod_LMAvAge <- function(spp) {
   lm(LMA ~ age, data=subset(LMA,species==spp))
 }
-
 
 for(n in names(labels.spp)) {
   plot_LMAvAge(n)
   mod_LMAvAge(n)
   summary(mod_LMAvAge(n))
 }
-
-
-
 ```
-
 
 #models with leaf counts per age
 The number of leaves on a leader is slightly affected by age however, with a decrease in leaf count along the leader with increasing age. This is what gives the perception of fewer leaves in some older plants. I'm not sure why this pattern looks stronger than leaf lifespan.
@@ -299,15 +419,15 @@ The number of leaves on a leader is slightly affected by age however, with a dec
 ```{r, echo=FALSE,results='hide', message=FALSE}
 
 plot_lfcountvAge <- function(spp) {
-  plot(lvs_end_total ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leaf count along shoot", cex.axis=.8, las=1, pch=16, log="x",
+  plot(lvs_end_total ~ age, data=subset(SummaryInd,species==spp), xlab="age", ylab="leaf count along shoot", cex.axis=.8, las=1, pch=16, log="x",
   main=labels.spp[spp])
-  points(lvs_end_total_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
-  points((lvs_end_total_mean+lvs_end_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
-  points((lvs_end_total_mean-lvs_end_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
+  points(lvs_end_total_mean ~ age, data=subset(SummarySppAge, species==spp), cex=1.3, pch=8)
+  points((lvs_end_total_mean+lvs_end_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=25)
+  points((lvs_end_total_mean-lvs_end_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=24)
 }
 
 mod_lfcountvAge <- function(spp) {
-  lm(lvs_end ~ age, data=subset(raw_leaf_lifespan,age>2.4 & species==spp))
+  lm(lvs_end ~ age, data=subset(SummaryInd,age>2.4 & species==spp))
 }
 
 for(n in names(labels.spp)) {
@@ -315,26 +435,23 @@ for(n in names(labels.spp)) {
   mod_lfcountvAge(n)
   summary(mod_lfcountvAge(n))
 }
-
-
 ```
 
 #models with shoot extenstion by age
 These models show that for some species, shoot extension decreases enormously in the older plants. This effect is larger than with number of leaves.
 
-
 ```{r, echo=FALSE,results='hide', message=FALSE}
 
 plot_newlengthvAge <- function(spp) {
-  plot(new_length ~ age, data=subset(raw_leaf_lifespan,species==spp), xlab="age", ylab="leader shoot extention", cex.axis=.8, las=1, pch=16, log="x",
+  plot(new_length ~ age, data=subset(SummaryInd,species==spp), xlab="age", ylab="leader shoot extention", cex.axis=.8, las=1, pch=16, log="x",
   main=labels.spp[spp])
-  points(new_length_mean ~ age, data=subset(LLSummary, species==spp), cex=1.3, pch=8)
-  points((new_length_mean+new_length_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=25)
-  points((new_length_mean-new_length_se) ~ age, data=subset(LLSummary, species==spp), cex=1.5, pch=24)
+  points(new_length_mean ~ age, data=subset(SummarySppAge, species==spp), cex=1.3, pch=8)
+  points((new_length_mean+new_length_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=25)
+  points((new_length_mean-new_length_se) ~ age, data=subset(SummarySppAge, species==spp), cex=1.5, pch=24)
 }
 
 mod_newlengthvAge <- function(spp) {
-  lm(new_length ~ age, data=subset(raw_leaf_lifespan,age>2.4 & species==spp))
+  lm(new_length ~ age, data=subset(SummaryInd,age>2.4 & species==spp))
 }
 
 for(n in names(labels.spp)) {
@@ -344,22 +461,20 @@ for(n in names(labels.spp)) {
 }
 ```
 
-
 #plots regressing variables against one another
 ```{r, echo=FALSE,results='hide', message=FALSE}
-plot(change_shoot_area~new_length,data=subset(raw_leaf_lifespan,change_shoot_area<1000000), log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="shoot extension (mm)", ylab="increased shoot cross sectional area")
+plot(change_shoot_area~new_length,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="shoot extension (mm)", ylab="increased shoot cross sectional area")
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
-mod <- lm(change_shoot_area~new_length +age,data=subset(raw_leaf_lifespan,change_shoot_area<1000000))
+mod <- lm(change_shoot_area~new_length +age,data=subset(SummaryInd,change_shoot_area<1000000))
 summary(mod)
 
-raw_leaf_lifespan$lvs_end_total <- raw_leaf_lifespan$lvs_end + raw_leaf_lifespan$lvs_new
-plot(lvs_end_total~lvs_start,raw_leaf_lifespan, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="starting leaf count", ylab="ending leaf count")
+plot(lvs_end_total~lvs_start,SummaryInd, log="xy",col=col.age[as.factor(age)], pch=16, cex=.8, xlab="starting leaf count", ylab="ending leaf count")
 
 legend("bottomright",col=col.age, labels.age, pch=16, cex=1)
-mod <- lm(lvs_start~lvs_end_total+age +age*lvs_end_total, raw_leaf_lifespan)
+mod <- lm(lvs_start~lvs_end_total+age +age*lvs_end_total, SummaryInd)
 summary(mod)
 #IS THERE AN EASY WAY TO ADD A 1:1 LINE TO THIS PLOT?
 
-
-plot(LL_birth_mean~LMA_mean,data=subset(LLSummary,species!="HATE"),col=col.age[as.factor(age)], pch=16, cex=.8, log="xy",xlab="LMA", ylab="leaf lifespan (calculated from leaf births")
-points(LL_birth_mean~LMA_mean,data=subset(LLSummary,species=="HATE"),col="red", pch=19, cex=.8)
+plot(LL_birth_mean~LMA_mean,data=subset(SummarySppAge,species!="HATE"),col=col.age[as.factor(age)], pch=16, cex=.8, log="xy",xlab="LMA", ylab="leaf lifespan (calculated from leaf births")
+points(LL_birth_mean~LMA_mean,data=subset(SummarySppAge,species=="HATE"),col="red", pch=19, cex=.8)
+```
